fix: Make size of hours readable on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -270,6 +270,7 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+	font-size: 2em;
 }
 
 /* Responsive */
